# tvilib

./: .gitignore  CMakeLists.txt  README.md  tachyum-toolchain.cmake
tachy/: CMakeLists.txt  generate.py  vilib.h
tachy/algorithm/: grayscale.h  qsort.h
tachy/lib/: array_and.h  array_find_first.h  array_find_max.h  array_find_min.h  array_mul_pair_sum.h  array_or.h  array_product.h  array_sum.h  array_xor.h  arrays_add.h  arrays_add_abs.h  arrays_and.h  arrays_msum.h  arrays_mul.h  footer.h  header.h
tachy/lib/wrap/: hmax.h  hmin.h  hmpsum.h  hmsum.h  hprod.h  hsum.h  pmov.h  vfill.h  vmadd.h
tachy/templates/: array_rop.h  arrays_bop.h
test/: CMakeLists.txt  array_and.cpp  array_find_first.cpp  array_find_max.cpp  array_find_min.cpp  array_mul_pair_sum.cpp  array_or.cpp  array_product.cpp  array_sum.cpp  array_xor.cpp  arrays_add.cpp  arrays_and.cpp  arrays_msum.cpp  arrays_mul.cpp  test_assert.h
